# google-hackathon

./: .env.example  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agent08_github_a2a_agent_mcp_server/: GITHUB_AGENT_GUIDE.md  Makefile  README.md  agent.py  agent_engine_app.py  pyproject.toml
agent08_github_a2a_agent_mcp_server/app_utils/: deploy.py  telemetry.py  typing.py
agent08_github_a2a_agent_mcp_server/gitHub_a2a_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent08_github_a2a_agent_mcp_server/github_agent/: agent.py
client_agent/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
client_agent/app/: __init__.py  agent.py  agent_engine_app.py
client_agent/app/app_utils/: __init__.py  authorized_a2a_client.py  deploy.py  telemetry.py  typing.py
client_agent/app/prompts/: agent.yaml
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
docs/knowledge_base/: 01_system_overview.md  02_repo_map.md  03_runtime_configuration.md  04_execution_flows.md  05_known_gaps_and_troubleshooting.md  06_example_queries.md  README.md
github_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  GITHUB_AGENT_GUIDE.md  Makefile  README.md  pyproject.toml
github_agent/.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
github_agent/deployment/terraform/: github.tf  outputs.tf  storage.tf  variables.tf
github_agent/deployment/terraform/dev/: iam.tf  variables.tf
github_agent/deployment/terraform/dev/vars/: env.tfvars
github_agent/deployment/terraform/vars/: env.tfvars
github_agent/github_agent/: __init__.py  agent.py
github_agent/github_agent/prompts/: agent.yaml
github_agent/prompts/: agent.yaml
github_agent/skills/adk-agent-conventions/: SKILL.md
github_agent/skills/conventional-commits/: SKILL.md
github_agent/skills/github-issue-triage/: SKILL.md
github_agent/skills/review-pr-changes/: SKILL.md
github_agent/skills/security-change-review/: SKILL.md
github_agent/tests/: helpers.py
github_agent/tests/integration/: test_agent.py  test_agent_engine_app.py
github_agent/tests/load_test/: README.md
rag_agent/: .env.example  Makefile  pyproject.toml
rag_agent/app/: agent.py  retriever.py  retrievers.py
rag_agent/data_ingestion/: ingest.py
skills/commit-impact-analysis/: SKILL.md
tests/integration/: test_agent.py  test_agent_engine_app.py
